--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -2,13 +2,27 @@
 
 =encoding utf-8
 
-=head1 10.6.0
+=head1 10.7.0
 
 =head2 Features
 
+=head3 Support for emmbedding Google Analytics-style UTM parameters into your message links
+
+Dada Mail now makes it easy to add UTM parameters to the links in your email messages.
+
+If you use a platform like Google Analytics, 
+you can then see when visitors come to your site, 
+from a link originating from your mass mailing messages. 
+ 
+This support works fine with Dada Mail's own clickthrough tracking, and you may use both at the same time. 
+
+See our blog post for details on this new feature: 
+
+L<http://blog.dadamailproject.com/2017/07/06/easily-use-dada-mail-with-google-analytics-campaign-tracking/>
+
 =head3 Upgraded SMTP Libraries
 
-Dada Mail's outgoing SMTP library have been updated, which should provide
+Dada Mail's outgoing SMTP library have been updated, which should provide more
 successful connections to a wider variety of SMTP servers and authentication 
 flavors. Of note: 
 
@@ -18,24 +32,26 @@ C<STARTTLS> is now an option when connecting to an SMTP server.
 
 =head4 More Verbose Debugging
 
-If something does go wrong, more information will be returned to help you get to the root 
-of the problem. 
+If something does go wrong, 
+more information will be returned to help you get to the root of the problem. 
 
 =head3 Upgraded POP3 Libraries
 
-Dada Mail's incoming POP3 library have also been updated, which should provide
-successful connections to a wider variety of POP3 servers and authentication 
-flavors. Of note: 
+Dada Mail's incoming POP3 library has also been updated, which should provide more successful connections to a wider variety of POP3 servers and authentication flavors. 
+
+Of note: 
 
 =head4 Better SSL/STARTTLS Support
 
 POP3 is used in Dada Mail in both the Bounce Handler, and Bridge plugins. Both now support SSL connections, 
 being able to specifically choose which port to connect to, 
-and if you would like to explicitly verify the SSL Certificate.
+and if you would like to explicitly verify the SSL Certificate or not.
 
-Both SMTP and POP3 B<SSL/TLS> options require the C<IO::Socket::SSL> module to be installed. 
-This can be done separately, or
-by installing the C<Bundle::DadaMail> module. 
+Both SMTP and POP3 B<SSL/TLS> options require the C<IO::Socket::SSL> Perl CPAN  module to be installed (as they both required in the past). 
+
+Installation can be done separately, 
+or by installing the C<Bundle::DadaMail> module, 
+if this module is not already available in your server environment.
 
 =head1 10.6.0
 
