--- a/dada/extras/documentation/pod_source/install_dada_mail-advanced_configuration.pod
+++ b/dada/extras/documentation/pod_source/install_dada_mail-advanced_configuration.pod
@@ -107,6 +107,20 @@ L<http://dadamailproject.com/d/install_dada_mail_cl.pod.html>
 B<Config Variable:> C<$RUNNING_UNDER>. 
 Valid values: C<CGI>, C<FastCGI>, C<PSGI>
 
+=head2 Configure Perl Environment 
+
+=head3 Additional Perl Library Paths
+
+Dada Mail comes with most of the CPAN Perl modules it needs to function correctly, 
+and  optional features can be enabled by installing additional CPAN Perl Modules. 
+See the following docs on how to do that: 
+
+L<http://dadamailproject.com/d/FAQ-installing_CPAN_Perl_modules.pod.html>
+
+There's a chance that your Perl library has been set up in a location that Dada Mail would not check 
+by default. If that's the case, add the absolute path to this library location in the text box labeled, 
+B<Additional Perl Library Paths>.  
+
 =head2 Configure Profiles
 
 Profiles allow your users to manage their own subscriptions, in one centralized location. For an overview of Dada Mail Profiles, see: 
