--- a/dada/extras/documentation/pod_source/changes_10_x.pod
+++ b/dada/extras/documentation/pod_source/changes_10_x.pod
@@ -44,7 +44,7 @@ are now disabled by default:
 
 =item * Registering for a new profile
 
-=item * Delering a profile
+=item * Deleting a profile
 
 =back
 
